--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 PORT=8080
-MONGOURI=mongodb+srv://kamal:bQ84rpZscLlgwVPN@cluster0.uj2soph.mongodb.net/DatatDB
+MONGOURI=mongodb+srv://kamal:bQ84rpZscLlgwVPN@cluster0.uj2soph.mongodb.net/databasetDB
 JWT_SECRET=kmlsecret112
-JWT_EXPIRY=1d 
+JWT_EXPIRY=1d
+accessToken=723267ffd74455bf6acdb6285fefea82
+endpoint=2a024000.problems.sphere-engine.com
+
+
 
